# snark_playground

./: README.md
arkworks/: Cargo.toml
arkworks/src/: common.rs  main.rs
arkworks/src/merkle_tree/: common.rs  constraints.rs  mod.rs
arkworks/src/private_multiplication/: contraints.rs  mod.rs
circom/: .gitignore  README.md  build.sh  package.json
circom/circuits/: private_multiplication.circom
circom/contracts/: Verifier.sol
circom/src/: index.js
halo2/: Cargo.toml
halo2/src/: complex_circuit.rs  lib.rs
halo2/src/fibonachi/: chip.rs  circuit.rs  mod.rs
halo2/src/private_mul/: chip.rs  circuit.rs  mod.rs
halo2/src/tutorial/: mod.rs
